--- a/css/styles.css
+++ b/css/styles.css
@@ -550,8 +550,8 @@ img {
 .modal-svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-svg:hover,
-.modal-svg:focus {
+.modal-button:hover .modal-svg,
+.modal-button:focus .modal-svg {
   fill: #ffffff;
 }
 .modal-p {
