--- a/css/styles.css
+++ b/css/styles.css
@@ -597,13 +597,13 @@ img {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.window-label-input:focus .window-label-svg {
+.window-label-input:focus ~ .window-label-svg {
   fill: #4d5ae5;
 }
 .window-label-div-textaria {
   margin-bottom: 16px;
 }
-.window-label-div-textaria {
+.window-label-textaria {
   width: 100%;
   height: 120px;
   font-size: 12px;
@@ -658,4 +658,10 @@ img {
   background-color: #4d5ae5;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: "Roboto";
+}
+.user-privacy-input:checked ~ label .window-label-privacy-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
