--- a/css/styles.css
+++ b/css/styles.css
@@ -618,6 +618,7 @@ img {
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-color: #4d5ae5;
+  border: 1px solid rgba(46, 47, 66, 0.4);
 }
 .window-label-div-checkbox {
   margin-bottom: 24px;
@@ -648,7 +649,7 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -658,7 +659,6 @@ img {
   background-color: #4d5ae5;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  font-family: "Roboto";
 }
 .user-privacy-input:checked ~ label .window-label-privacy-span {
   background-color: #404bbf;
