--- a/css/styles.css
+++ b/css/styles.css
@@ -620,6 +620,9 @@ img {
   border-color: #4d5ae5;
   border: 1px solid rgba(46, 47, 66, 0.4);
 }
+.window-label-textaria:focus {
+  border-color: #4d5ae5;
+}
 .window-label-div-checkbox {
   margin-bottom: 24px;
 }
