--- a/css/styles.css
+++ b/css/styles.css
@@ -210,8 +210,6 @@ img {
   color: var(--second-black-color);
   letter-spacing: 0.32px;
   font-size: 16px;
-
-  margin-bottom: 8px;
 }
 
 .list-display {
@@ -244,7 +242,14 @@ img {
   width: calc((100% - 72px) / 4);
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
+}
+.features-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--black-color);
+  margin-bottom: 8px;
 }
 
 .features-wrapper {
@@ -302,6 +307,9 @@ img {
   text-align: center;
   margin-bottom: 8px;
 }
+.about-team-paragraph {
+  margin-bottom: 8px;
+}
 .about-team-ul {
   display: flex;
   justify-content: center;
@@ -348,6 +356,7 @@ img {
 .portfolio-li:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  cursor: pointer;
 }
 .portfolio-li:hover p {
   transform: translateY(0%);
@@ -428,9 +437,7 @@ img {
 }
 .footer-conteiner {
   display: flex;
-  gap: 120px;
   align-items: baseline;
-  margin-right: 120px;
 }
 .footer-logo {
   display: inline-block;
@@ -458,6 +465,7 @@ img {
   margin-right: 120px;
 }
 .footer-form {
+  margin-left: auto;
 }
 .footer-form-object {
   display: flex;
@@ -510,6 +518,15 @@ img {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
 }
 .modal-window {
   position: absolute;
@@ -652,13 +669,14 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
-  font-family: "Roboto", sans-serif;
+  margin: 0 auto;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
+  border-radius: 4px;
   background-color: #4d5ae5;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
